# scotland-yard

./: .gitignore  Cargo.toml  README.md  api.yml  bots.just  justfile  package.json  server.just  ws.md
.zed/: settings.json
bots/: Cargo.toml
bots/bot_random/: Cargo.toml
bots/bot_random/src/: main.rs
bots/runtime/: Cargo.toml
bots/runtime/src/: connection.rs  lib.rs  main.rs
client/: Cargo.toml
client/src/: main.rs  map.rs  map_canvas.rs  map_data.rs  root.rs  websocket.rs
client/src/map/: canvas.rs  data.rs  mod.rs
client/src/sidebar/: button.rs  default.rs  lobby.rs  mod.rs
server/: Cargo.toml
server/src/: lib.rs  main.rs
server/src/game/: mod.rs
server/src/game/character/: detective.rs  mister_x.rs  mod.rs
server/src/routes/: game.rs  map.rs  mod.rs
server/src/routes/game/: mod.rs  packet.rs
server/src/services/: data.rs  game.rs  lobby.rs  mod.rs  ws_connection.rs
server/src/services/data/: mod.rs  service.rs
server/tests/: abilities.rs  can_move.rs  common.rs  connections.rs  create_game.rs  detective_can_lose.rs  join_game.rs  mister_x_can_lose.rs  not_in_game.rs  rounds.rs  shows_mister_x.rs  start_round.rs  stations.rs  ws.rs
server/tests/common/: connection.rs  data.rs  mod.rs  ws.rs
web/: biome.json  nuxt.config.ts  package.json  pnpm-lock.yaml
web/components/game/: canvas.vue
web/composables/: useGameCanvas.ts  useGameConnection.ts
web/pages/: index.vue  replay.vue
web/types/: canvas.ts
web/utils/type/: canvas.ts
