[workspace]
resolver = "3"
members = ["server", "packages/game", "packages/packets", "bots/bot_random", "bots/runtime", "packages/packets_derive", "client"]

[patch.crates-io]
gpui = { git="https://github.com/zed-industries/zed.git"}
gpui-component = {git="https://github.com/longbridge/gpui-component.git"}

[workspace.dependencies]
rand = "0.9.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
uuid = { version = "1.18.1", features = ["serde", "v4"] }
tungstenite = "0.28.0"
ureq = { version = "3.1.4", features = ["json"] }
thiserror = "2.0.16"
itertools = "0.14.0"
