[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
game = { path = "../packages/game" }
packets = { path = "../packages/packets" }

serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"

gpui = { package = "gpui-ce", version = "0.3.3" }

futures-timer = "3.0.3"
reqwest = { version = "0.13.1", features = ["blocking", "json"] }
