[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
game = { path = "../packages/game" }
packets = { path = "../packages/packets" }

serde = { workspace = true }
serde_json = { workspace = true }

gpui = { package = "gpui-ce", version = "0.3.3" }

tungstenite = { workspace = true }
ureq = { workspace = true }

futures-timer = "3.0.3"

uuid = { workspace = true }

itertools = { workspace = true }
