[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
game = { path = "../packages/game" }
packets = { path = "../packages/packets" }

thiserror = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }

gpui = { version = "0.2.2" }
gpui-component = "0.5.1"
gpui-component-assets = "0.5.1"

tungstenite = { workspace = true }
ureq = { workspace = true }

futures-timer = "3.0.3"

uuid = { workspace = true }

itertools = { workspace = true }
