[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["macros", "ws"] }

tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6.6", features = ["cors", "tower", "trace"] }
tower = { version = "0.5.2", features = ["util"] }

tracing-subscriber = "0.3.20"
tracing = "0.1.41"

serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"

futures = "0.3.31"
itertools = "0.14.0"
thiserror = "2.0.16"
dotenv = "0.15.0"
cookie = "0.18.1"
axum-extra = { version = "0.12.2", features = ["typed-header"] }
futures-util = "0.3.31"
uuid = { version = "1.18.1", features = ["serde", "v4"] }
rand = "0.9.2"

[dev-dependencies]
axum-test = { version = "17.3.0", features = ["ws"] }
