[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
packets = { path = "../packages/packets" }
game = { path = "../packages/game" }

axum = { version = "0.8.4", features = ["macros", "ws"] }
axum-extra = { version = "0.12.2", features = ["typed-header"] }

tokio = { version = "1.47.1", features = ["fs", "macros", "rt-multi-thread"] }
tower-http = { version = "0.6.6", features = ["cors", "tower", "trace"] }
tower = { version = "0.5.2", features = ["util"] }

tracing-subscriber = "0.3.20"
tracing = "0.1.41"

serde = { workspace = true }
serde_json = { workspace = true }

futures = "0.3.31"

dotenv = "0.15.0"
cookie = "0.18.1"
futures-util = "0.3.31"
tempfile = "3.23.0"

itertools = { workspace = true }

thiserror = { workspace = true }

uuid = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
axum-test = { version = "17.3.0", features = ["ws"] }
