[package]
name = "runtime"
version = "0.1.0"
edition = "2024"

[dependencies]
game = { path = "../../packages/game" }
packets = { path = "../../packages/packets" }

clap = { version = "4.5.53", features = ["derive"] }

uuid = { version = "1.18.1", features = ["serde", "v4"] }

tungstenite = "0.28.0"
ureq = "3.1.4"

serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
