[package]
name = "runtime"
version = "0.1.0"
edition = "2024"

[dependencies]
game = { path = "../../packages/game" }
packets = { path = "../../packages/packets" }

clap = { version = "4.5.53", features = ["derive"] }

uuid = { workspace = true }

tungstenite = { workspace = true }
ureq = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
